Kubernetes/old_yamls/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: registry.devops.applifting.cz/internal-services/link-shortener:1.6
          command: ['python', 'link_shortener/server.py']
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: applifting-docker-registry-secrets-radek
