Kubernetes/old_yamls/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: url-shortener
spec:
  rules:
    - host: urlshortener.k8s.applifting.cz
      http:
        paths:
          - backend:
              serviceName: web-service
              servicePort: 8000
